monolithic/addon/resources/service-insights-on-prem.yaml
apiVersion: v1
kind: Service
metadata:
  name: insights-on-prem
  namespace: insights-on-prem-poc
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: insights-on-prem
