monolithic/addon/resources/route-insights-on-prem.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: insights-on-prem
  namespace: insights-on-prem-poc
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: insights-on-prem
